# demo_mandelbrot

./: .gitignore  CMakeLists.txt  README.md
android/: .gitignore
android/demo/jni/: Android.mk  Application.mk  config.h  demo.cpp  stdafx.h
bench/: CMakeLists.txt  benchArithmOps.cpp  benchCmplAbs.cpp  benchFloatInit.cpp  benchIndexVar.cpp
cmake/: FindTBB.cmake  config.h.in  cpptools.cmake  openMPTools.cmake
demo/: CMakeLists.txt  demo.cpp  doloopdemo.h  floatinitdemo.h  openmpscheduledemo.h  paralleldemo.h  perfdemo.h  printiterations.h  recursion.h  simddemo.h  simpleexample.h  stepdemo.h  test.h  transformdemo.h  unrolldemo.h  warmupdemo.h
include/: extern.h  perf_tester.h
include/easy/: command.h  memory.h  picture.h  pixel_render_engine.h  viewinfo.h
include/easy/mfc/: cairo_render_engine.h  direct2d_render_engine.h  easy_mfc.h  gdi_render_engine.h  mfc_pixel_render_engine.h  null_render_engine.h  opengl_render_engine.h
include/easy/qt/: easy_qt.h  image_pixmap_render_engine.h
include/mandel/: amp.h  autovec.h  complex.h  future.h  intrinsics_helper.h  openmp.h  pixel.h  ppl.h  sequentiell.h  sse.h  sse_vectorclass.h  tbb.h
tests/: CMakeLists.txt
tests/demo_tests/: CMakeLists.txt  demo_tests.cpp  test_helper.h
tests/unit_tests/: CMakeLists.txt  mandel_tests.cpp  stdafx.h
